--- a/_config.yml
+++ b/_config.yml
@@ -485,6 +485,8 @@ libs:
     ribbonRefresh: /libs/background/ribbon-refresh.min.js
     ribbon_dynamic: /libs/background/ribbon-dynamic.js
     instantpage: /libs/instantpage/instantpage.js
+    astro404BodyMovin: /libs/astro404/bodymovin.js
+    astro404Data: /libs/astro404/data.js
 
 # The post featured images that needs to be displayed when there is no image.
 # 无文章特色图片时需要显示的文章特色图片.
